# GENAI

./: README.md  main.py  pyproject.toml  requirements.txt
chains/: README.md  conditional_chain.py  parallel_chain.py  sequential_chain.py  simple_chain.py
genai/: README.md  genai_demo.py
genai/console ai app/: README.md  console-ai-app.py
genai/cosine-similarity-app/: README.md  cosine-similarity-app.py
output parsers/: README.md
output parsers/json output parser/: README.md  json-output-parser.py
output parsers/pydantic output parser/: README.md  pydantic-output-parser.py
output parsers/string output parser/: README.md  string-output-parser.py
output parsers/structured output parser/: README.md  structured-output-parser.py
prompts/: README.md  chat-prompt-template.py  messages.py  prompt-template.py
prompts/customer support assistant/: README.md  chat_history.txt  message_placeholder.py
prompts/generate custom prompt templates/: README.md  medical-chatbot-template.py  medical_prompt_template.json  test-created-template.py
rag/: README.md
rag/document loaders/: README.md
rag/retrievers/: overview.txt
rag/text splitters/: README.md
rag/vector stores/: overview.txt
runnables/: README.md  runnable_branch.py  runnable_lambda.py  runnable_parallel.py  runnable_passthrough.py  runnable_sequence.py
spring boot notes/: README.md
structured output/: README.md
structured output/json structured output/: README.md  structured-output-json.py
structured output/pydantic demo/: README.md  pydantic_demo.py  structured-output-pydantic.py
(+27 files in other folders)
