[project]
name = "starting-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.2",
    "grandalf>=0.8",
    "huggingface-hub>=1.18.0",
    "ipykernel>=7.2.0",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.4",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "pydantic[email]>=2.13.4",
    "pypdf>=6.13.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "torch>=2.12.0",
    "transformers>=5.10.2",
    "unstructured>=0.22.32",
]
